Fix padding and spacing in header

--- a/styles/header.css
+++ b/styles/header.css
@@ -11,6 +11,7 @@
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: rgb(230, 230, 230); 
+  padding-bottom: 1px;
 }
 
 .left-section {
